--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 <h1> Hello world. <h1>
 
 <form action="{{ url_for('index') }}" method="POST">
+{{ form.hidden_tag() }}
 <input type="text", name="search", id="search", placeholder="search">
 <button type="submit">Search</button>
 </form>
